--- a/main.tex
+++ b/main.tex
@@ -2777,4 +2777,189 @@
 
 \end{ans}
 
+\fakesubsection{4.8 有限生成アーベル群}
+
+\begin{ans}
+  略.
+\end{ans}
+
+\begin{ans}
+  位数$16$のアーベル群は, 定理4.8.1より
+  $\Z{2} \times \Z{2} \times \Z{2} \times \Z{2}$,
+  $\Z{2} \times \Z{2} \times \Z{4}$,
+  $\Z{2} \times \Z{8}$,
+  $\Z{4} \times \Z{4}$,
+  $\Z{16}$
+  のいずれかに同型であるが, これらのうち$H$を部分群にもつのは
+  $\Z{2} \times \Z{2} \times \Z{4}$,
+  $\Z{2} \times \Z{8}$,
+  $\Z{4} \times \Z{4}$,
+  $\Z{16}$
+  である.
+  さらにこれらのうち, $G/H \simeq \Z{2} \times \Z{2}$を満たすのは,
+  $\Z{2} \times \Z{2} \times \Z{4}$,
+  $\Z{2} \times \Z{8}$
+  である.
+\end{ans}
+
+\fakesubsection{4.9 交代群}
+
+\begin{ans}
+  $(1\ 4\ 5)(1\ 2\ 3)$
+\end{ans}
+
+\begin{ans}
+  (1) 置換表現の核は$A_5$の正規部分群なので, $\{ 1 \}$または$A_5$である.
+  $\order{A_5} > \order{\mathfrak{S}_2}, \order{\mathfrak{S}_3}, \order{\mathfrak{S}_4}$により置換表現の核は
+  $\{ 1 \}$ではなく$A_5$である. すなわち置換表現は自明.
+
+  (2) もし位数$15$の部分群$H$があるとすると, $A_5$の$A_5/H$への自然な作用は
+  非自明な置換表現$A_5 \rightarrow \mathfrak{S}_4$を与えるので矛盾.
+  位数$20$, $30$の場合も同様.
+  (注意: ここでは$A_5$が位数$60$であることと単純群であることしか用いていない.)
+\end{ans}
+
+\begin{ans}
+  (1) $n \ge 5$ならば, 系4.9.4の証明で示したように$[\mathfrak{S}_n, \mathfrak{S}_n] \supset A_n$.
+  また$n = 3, 4$の場合も
+  \begin{align*}
+    (1\ 2)(1\ 3)(1\ 2)^{-1}(1\ 3)^{-1} &= (1\ 2\ 3) \\
+    (1\ 2\ 3)(2\ 3\ 4)(1\ 2\ 3)^{-1}(2\ 3\ 4)^{-1} &= (1\ 4)(2\ 3)
+  \end{align*}
+  より$[\mathfrak{S}_n, \mathfrak{S}_n] \supset A_n$が成り立つことがわかる.
+  $\mathfrak{S}_n$の指数$2$の部分群$H$について, 命題4.3.2 (2) より$[\mathfrak{S}_n, \mathfrak{S}_n] \subset H$であるから,
+  $H = A_n$.
+
+  (2) もしそのような作用があればその置換表現$\rho: G \rightarrow \mathfrak{S}_5$の核は$G$ではないから$\{ 1 \}$である.
+  よって$\rho$は単射で$G \cong \mathrm{Im}\rho$であるが,
+  $\mathrm{Im}\rho$は$\mathfrak{S}_5$の指数$2$の部分群なので$G \cong A_5$.
+
+  (3) シローの定理よりシロー$3$部分群の数の候補は$1$, $4$, $10$のいずれかであり,
+  かつシロー$3$部分群のなす集合に対する共役による作用は推移的であって, その置換表現は非自明である.
+  このことと, $G$が単純群であることから, 置換表現は単射でなければならない.
+  よってシロー$3$部分群の数は$10$である.
+  シロー$5$部分群の数が$6$であることは容易である.
+
+  (4) シロー$3$部分群, シロー$5$部分群はそれぞれ位数$3$, $5$で, 互いに$1$以外の共通元をもたない.
+  よって求めるものは (3) より $60 - (2 \cdot 10 + 4 \cdot 6) = 16$.
+
+  (5) $x$を位数$10$の元とする. このとき$x^2$と$x^6$は異なる元であり, 同じシロー$5$部分群に属する.
+  シロー$5$部分群のなす集合に対する共役による (推移的) 作用を考えると, 適当な元$g_1$, $g_2$, $g_3$, $g_4$, $g_5$を
+  \begin{align*}
+    &\{ x^2, x^6 \}, \\
+    &\{ g_1x^2g_1^{-1}, g_1x^6g_1^{-1} \}, \\
+    &\{ g_2x^2g_2^{-1}, g_2x^6g_2^{-1} \}, \\
+    &\{ g_3x^2g_3^{-1}, g_3x^6g_3^{-1} \}, \\
+    &\{ g_4x^2g_4^{-1}, g_4x^6g_4^{-1} \}, \\
+    &\{ g_5x^2g_5^{-1}, g_5x^6g_5^{-1} \}
+  \end{align*}
+  がそれぞれ異なる$6$つのシロー$5$部分群の$2$元部分集合であるようにとれる.
+  このとき, 異なる$12$個の位数$10$の元として (いわば上記の元の"平方根"),
+  \begin{align*}
+    &x, x^3, g_1xg_1^{-1}, g_1x^3g_1^{-1}, g_2xg_2^{-1}, g_2x^3g_2^{-1},\\
+    &g_3xg_3^{-1}, g_3x^3g_3^{-1}, g_4xg_4^{-1}, g_4x^3g_4^{-1}, g_5xg_5^{-1}, g_5x^3g_5^{-1}
+  \end{align*}
+  がとれることになる.
+  ところが (4) と合わせると, シロー$2$部分群の元の候補が残り$4$つしかなく, シロー$2$部分群が$G$の正規部分群であることになり, $G$が単純群であることに矛盾.
+  よって位数$10$の元は存在しない.
+
+  (6) (4)より$\order{C(x)} \le 15$である.
+  さらに, $G$は位数$12$の部分群をもたないと仮定していたから, $\order{C(x)} \neq 5$である.
+  また, 演習問題4.9.2 (2) と同じことが$G$についてもいえるので, $\order{C(x)} > 5$である.
+  ($\order{C(x)} = 1$ならば$G$の中心が非自明となるので矛盾である.)
+  したがって$\order{C(x)}$は$6, 10, 12, 15$のいずれかとなる.
+
+  もし$\order{C(x)} = 6$とすると, $\order{Z_G(x)} = 10$なので$Z_G(x)$に位数$5$の元$x_5$が存在する.
+  このとき$xx_5 = x_5x$より, $(xx_5)^2 = x_5^2$, $(xx_5)^5 = x_5^4(xx_5) = x$, $(xx_5)^{10} = x^2 = 1$より,
+  $xx_5$は位数$10$の元である. これは (5) に矛盾するから, $\order{C(x)} \neq 6$.
+
+  もし$\order{C(x)} = 10$とすると, 位数が$3$, $5$以外で$C(x)$に属さない元はたかだか$5$個であり,
+  そのような元の安定化群の位数は$12$以上となり矛盾. $\order{C(x)} = 12$の場合も同様なので, $\order{C(x)} \neq 10, 12$.
+
+  以上により$\order{C(x)} = 15$, すなわち$\order{Z_G(x)} = 4$である.
+
+  (7) $H_1 \neq H_2$かつ$H_1 \cap H_2 \neq \{ 1 \}$と仮定して矛盾を導く. $1 \neq x \in H_1 \cap H_2$とすると,
+  $H_1 \neq H_2$より$x$は位数$2$であるから, (6) より$\order{Z_G(x)} = 4$.
+  一方$H_1$, $H_2$はアーベル群であるから, $H_1, H_2 \subset Z_G(x)$.
+  したがって$H_1 = H_2 (= Z_G(x))$となり矛盾.
+
+  (8) (3) と同様の議論により, シロー$2$部分群の数は$5$または$15$である.
+  (7) より異なるシロー$2$部分群が共通元を持たないことと, (4) より, シロー$2$部分群の数は$5$である.
+  よってシロー$2$部分群の集合に対する$G$の共役による作用は,
+  元の個数が$5$である集合上の自明でない作用である.
+  このことと (2) より$G \cong A_5$.
+\end{ans}
+
+\begin{ans}
+  (1) 長さ$3$の巡回置換$(i\ j\ k)$で$i$, $j$, $k$のいずれも$1$でないものは,
+  $(i\ j\ k) = (1\ k\ i)(1\ i\ j)$とかける.
+  したがって$(1\ i\ j)$の形の元は長さ$3$の巡回置換を生成し, $A_n$ ($n \ge 3$) を生成する.
+
+  (2) $\phi(\sigma)$が長さ$3$の巡回置換でないとする.
+  $\phi$は位数を保存するので, $\phi(\sigma)$の型は$(3,\dots, 3, 1,\dots, 1)$である.
+  このとき$n \ge 6$としてよい.
+  $\phi(\sigma)$の型に$3$の現れる回数を$a$とすると,
+  演習問題4.2.6より
+  \begin{align*}
+    \order{Z_{\mathfrak{S}_n}(\sigma)} &= 3 \cdot (n - 3)! \\
+    \order{Z_{\mathfrak{S}_n}(\phi(\sigma))} &= 3^a \cdot a! \cdot (n - 3a)!
+  \end{align*}
+  さらに, $\sigma$の型には$1$が複数回, $\phi(\sigma)$の型に$3$が複数回現れることに注意すると,
+  演習問題4.2.7より
+  \begin{align*}
+    \order{Z_{A_n}(\sigma)} &= \order{Z_{\mathfrak{S}_n}(\sigma)}\\
+    \order{Z_{A_n}(\phi(\sigma))} &= \order{Z_{\mathfrak{S}_n}(\phi(\sigma))}
+  \end{align*}
+  であり, また$\phi$が$A_n$の自己同型であることから$\order{Z_{A_n}(\phi(\sigma))} = \order{Z_{A_n}(\sigma)}$.
+  これらを合わせて
+  \[
+    3 \cdot (n - 3)! = 3^a \cdot a! \cdot (n - 3a)!
+  \]
+  が得られる. これをみたす$n$が$6$のみであることは, すでに演習問題4.6.12の解答で示されている.
+
+  (3) $(1\ 2\ i)(1\ 2\ j) = (1\ i)(2\ j)$であることに注意する.
+  まず
+  \begin{align*}
+    \phi((1\ 2\ i)) &= (a\ b\ c) \\
+    \phi((1\ 2\ j)) &= (d\ e\ f)
+  \end{align*}
+  とおく.
+  もし$a$, $b$, $c$, $d$, $e$, $f$がすべて異なるならば,
+  $\phi((1\ i)(2\ j))$の位数が$3$となって矛盾である.
+  そこで, 共通する文字を$a$と置きなおして,
+  \begin{align*}
+    \phi((1\ 2\ i)) &= (a\ b\ c) \\
+    \phi((1\ 2\ j)) &= (a\ d\ e)
+  \end{align*}
+  としてよい.
+  もし$b$, $c$, $d$, $e$が互いに異なるものであれば,
+  $(a\ b\ c)(a\ d\ e) = (a\ d\ e\ b\ c)$となって$\phi$が位数を保存しないので矛盾.
+  さらに$(a\ b\ c)(a\ d\ e)$はたかだか$4$つの文字からなる位数$2$の偶置換なので,
+  $(2, 2)$型の元しかありえず, 互いに異なる文字がちょうど$4$つであることが分かる.
+  このことと対称性とから$b = d$または$b = e$ (かつ$c \neq d$) としてよいが, $b = e$のときは
+  $(a\ b\ c)(a\ d\ e) = (a\ d\ c)$となって$\phi$が位数を保存しないので矛盾.
+  よって$b = d$.
+
+  (4) (3) の$a$, $b$によって$a_1 = a$, $a_2 = b$とすればよい.
+
+  (5) (4) の$a_1,\dots, a_n$を用いて $\sigma \in \mathfrak{S}_n$を \[
+    \sigma = \begin{pmatrix*}
+      1 & \cdots & n \\
+      a_1 & \cdots & a_n
+    \end{pmatrix*}
+  \]
+  と定めれば, $\phi((1\ 2\ i)) = \sigma(1\ 2\ i)\sigma^{-1}$である.
+  また$(1\ i\ j) = (1\ 2\ j)^{-1}(1\ 2\ i)(1\ 2\ j)$であることと (1) より,
+  $(1\ 2\ i)$の形の元は$A_n$を生成する.
+  したがって, $A_n$の任意の元$\tau$について$\phi(\tau) = \sigma\tau\sigma^{-1}$であり,
+  $\phi$は$\mathfrak{S}_n$における内部自己同型の$A_n$への制限である.
+\end{ans}
+
+\fakesubsection{4.10 正多面体群}
+
+\begin{ans}
+  $\mathrm{Im}\rho$の元のうち, 向き合う面の中心を結ぶ軸による回転は位数$2$,
+  対角の頂点を結ぶ軸による回転は位数$3$で, これらによって$\mathfrak{S}_3$が生成されるから$\rho$は全射.
+\end{ans}
+
 \end{document}
